--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,7 +159,6 @@ header {
   align-items: center;
   height: 100vh;
   padding: 0 60px;
-  overflow: auto;
 }
 
 .navigation {
